--- a/app.scss
+++ b/app.scss
@@ -280,6 +280,259 @@ input,textarea{
   background: #898888;
   margin: 0 5px 3px 5px;
 }
+//index
+.sy-pager{
+  position: relative;
+  top: -40px;
+  z-index: 999;
+}
+.sy-pager li {
+  width: 1em;
+  height: 1em;
+}
+.sy-pager li.sy-active a {
+  background-color: $hoverColor;
+}
+.app{
+  text-align: center;
+  padding-bottom: 25px;
+}
+.app .pro_kinds{
+  padding: 27px 0 55px 0;
+}
+.app_div{
+  width: 100%;
+  height: 200px;
+  margin-bottom: 30px;
+  border: 2px solid #ebebeb;
+  text-align: center;
+  line-height: 200px;
+}
+.app_a{
+  display: block;
+}
+.index-shop{
+  background: #f4f4f4;
+  text-align: center;
+  padding-bottom: 25px;
+}
+.pro_kinds{
+  font-size: 28px;
+  color: #030304;
+  padding: 55px 0;
+}
+.product{
+  width: 100%;
+  background: #fff;
+  height: 300px;
+  margin-bottom: 30px;
+  -webkit-transition: 1s;
+  -moz-transition: 1s;
+  -ms-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+}
+.pro-img{
+  padding-left: 50px;
+  line-height: 300px;
+}
+.pro-info{
+  padding-right: 50px;
+}
+.pro_name{
+  font-size: 24px;
+  color: #000;
+  margin-top: 95px;
+}
+.pro_tip{
+  font-size: 18px;
+  color: #898888;
+  margin-bottom: 17px;
+  margin-top: 10px;
+}
+.pro_money{
+  font-size: 24px;
+  color: $hoverColor;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.product:hover{
+  transform: translate3d(0,-2px,0);
+  -webkit-box-shadow: 0 15px 30px rgba(0,0,0,.1);
+  -moz-box-shadow: 0 15px 30px rgba(0,0,0,.1);
+  box-shadow: 0 15px 30px rgba(0,0,0,.1);
+}
+.product_img{
+  -webkit-transition: 1s;
+  -moz-transition: 1s;
+  -ms-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+}
+.product:hover .product_img{
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+}
+.index-ktv{
+  padding-bottom: 25px;
+}
+.index-ktv{
+  width: 100%;
+  overflow: hidden;
+}
+@media only screen and (min-width: 401px) {
+  .index-ktv .sy-box .sy-slides-wrap {
+    min-width: 400px;
+    max-width: 590px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.index-ktv .sy-box .sy-slides-crop {
+  overflow: visible;
+}
+@media only screen and (max-width: 500px) {
+  .index-ktv .sy-box .sy-controls li {
+    min-width: 2.4em;
+  }
+  .index-ktv .sy-box .sy-controls li a:after {
+    line-height: 1.4em;
+    height: 1.4em;
+    width: 1.4em;
+    margin-top: -0.7em;
+    margin-left: -0.7em;
+  }
+}
+@media only screen and (min-width: 501px) {
+  .index-ktv .sy-box .sy-controls li {
+    width: 100%;
+  }
+  .index-ktv .sy-box .sy-controls li.sy-prev {
+    left: -100%;
+  }
+  .index-ktv .sy-box .sy-controls li.sy-next {
+    right: -100%;
+  }
+  .index-ktv .sy-box .sy-controls li a:after {
+    background: none;
+  }
+}
+.index-ktv .sy-box .sy-slide {
+  opacity: 0.6;
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;
+}
+@media only screen and (max-width: 500px) {
+  .index-ktv .sy-box .sy-slide .product-info {
+    padding: 1em 2.4em;
+  }
+}
+.index-ktv .sy-box .sy-slide .product-info p {
+  margin-bottom: 1em;
+}
+.index-ktv .sy-box .sy-slide .product-info p{
+  opacity: 1;
+}
+
+.index-ktv .sy-box .sy-slide .image-content {
+  line-height: 0;
+}
+.index-ktv .sy-box .sy-slide .image-content .product-image {
+  max-width: 100%;
+}
+.index-ktv .sy-box .sy-slide.sy-active {
+  opacity: 1;
+}
+.index-ktv .sy-box .sy-slide.sy-active .buy-now {
+  opacity: 1;
+}
+.index-ktv .product-info{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 999;
+  color: #fff;
+  width: 100%;
+  padding-right: 30px;
+  padding-left: 30px;
+}
+.index-ktv .sy-box .sy-slide.sy-active:hover .product-info p, .index-ktv .sy-box .sy-slide.sy-active:hover .product-info .button-link {
+  opacity: 1;
+}
+.index-ktv .sy-box .sy-slide .product-info p,
+.index-ktv .sy-box .sy-slide .product-image, .index-ktv .sy-box .sy-slide.sy-active, .index-ktv .sy-box .sy-slide.sy-active:hover .product-image, .index-ktv .sy-box .sy-slide.sy-active:hover .product-info p, .index-ktv .sy-box .sy-slide.sy-active.transition {
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;
+}
+.index-ktv-slider .slide_box {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media only screen and (min-width: 401px) {
+  .index-ktv-slider .slide_box {
+    min-width: 400px;
+    max-width: 590px;
+    width: 50%;
+  }
+}
+.index-ktv .sy-pager{
+  position: relative;
+  top: 0;
+  z-index: 999;
+}
+.index-ktv .sy-pager li {
+  width: 0.6em;
+  height: 0.6em;
+}
+.ktv_a{
+  color: #fff;
+}
+.ktv_a:hover{
+  color: #fff;
+}
+.product-td{
+  @include dib();
+  width: 270px;
+  font-size: 16px;
+  vertical-align: middle;
+}
+.product-yuan{
+  @include dib();
+  vertical-align: middle;
+}
+.product-money{
+  font-size: 24px;
+  font-weight: bold;
+}
+.pro_moreDetail{
+  @include dib();
+  width: 120px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  color: #fefefe;
+  background: $hoverColor;
+  border-radius: 5px;
+  vertical-align: middle;
+  margin-top: 5px;
+  box-shadow: 0 0 27px rgba(0,0,0,0.3);
+}
+.pro_moreDetail:hover{
+  color: #fff;
+  background: lighten($hoverColor,5%);
+}
+
 // page
 .productLeft{
   padding: 66px 0 66px 300px;
