--- a/app.css
+++ b/app.css
@@ -46,7 +46,8 @@ a {
   text-decoration: none; }
 
 a:hover, a:focus {
-  text-decoration: none; }
+  text-decoration: none;
+  outline: none; }
 
 a:visited {
   text-decoration: none; }
@@ -465,9 +466,6 @@ input, textarea {
 .index-ktv .sy-box .sy-slide .product-info p {
   margin-bottom: 1em; }
 
-.index-ktv .sy-box .sy-slide .product-info p {
-  opacity: 1; }
-
 .index-ktv .sy-box .sy-slide .image-content {
   line-height: 0; }
 
@@ -565,11 +563,32 @@ input, textarea {
   color: #fff;
   background: #ff651a; }
 
-.productLeft {
-  padding: 66px 0 66px 300px;
-  background: #ff973c;
-  width: 800px; }
+.page-product {
+  padding: 0; }
 
+.page-product .col-lg-5 {
+  background: #ff973c;
+  padding: 66px 0 66px 15%; }
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .page-product .productLeft {
+    width: 100%;
+    background: #ff973c; }
+
+  .page-product .col-lg-5 {
+    padding: 66px 0; } }
+@media (min-width: 1241px) and (max-width: 1599px) {
+  .page-product .col-lg-5 {
+    padding: 66px 0 66px 4%; } }
+@media (min-width: 1281px) and (max-width: 1366px) {
+  .page-product .col-lg-5 {
+    padding: 66px 0 66px 6%; } }
+@media (min-width: 1367px) and (max-width: 1441px) {
+  .page-product .col-lg-5 {
+    padding: 66px 0 66px 8%; } }
+@media (min-width: 1600px) and (max-width: 1700px) {
+  .page-product .col-lg-5 {
+    padding: 66px 0 66px 11%; } }
 .productRight {
   padding: 66px 0 66px 120px;
   display: inline-block;
@@ -628,7 +647,7 @@ input, textarea {
   vertical-align: middle; }
 
 #chooseColor li {
-  width: 200px;
+  width: 180px;
   height: 60px;
   margin-top: 0; }
 
@@ -636,8 +655,8 @@ input, textarea {
   display: inline-block;
   *display: inline;
   *zoom: 1;
-  width: 30px;
-  height: 30px;
+  width: 26px;
+  height: 26px;
   border-radius: 100%;
   vertical-align: middle;
   margin-right: 15px; }
@@ -655,8 +674,8 @@ input, textarea {
   vertical-align: middle; }
 
 .proService span {
-  padding: 0 25px;
-  font-size: 22px;
+  padding: 0 20px;
+  font-size: 20px;
   color: #9d9c9c;
   vertical-align: middle; }
 
@@ -675,7 +694,7 @@ input, textarea {
 
 .proBuy {
   width: 694px;
-  margin-top: 30px;
+  margin-top: 26px;
   padding: 50px 23px;
   background: #fff;
   box-shadow: 0 0 27px rgba(0, 0, 0, 0.1); }
@@ -766,6 +785,52 @@ input, textarea {
   background: #fff;
   z-index: 99999; }
 
+@media (min-width: 1240px) and (max-width: 1600px) {
+  .accessoriesImgs {
+    width: 500px; }
+
+  .accWords, .colorsWords {
+    padding-right: 30px; }
+
+  .proService .iconfont {
+    font-size: 50px; }
+
+  .proService span {
+    padding: 0 15px;
+    font-size: 18px; }
+
+  .colors {
+    margin: 32px 0; }
+
+  .proBuy {
+    width: 560px;
+    margin-top: 38px;
+    padding: 50px 23px; }
+
+  .addTo {
+    width: 140px;
+    height: 68px;
+    line-height: 68px;
+    font-size: 20px;
+    margin-right: 20px; }
+
+  .buyTo {
+    margin-right: 0; }
+
+  .proBuy .inputBtn {
+    width: 80px; }
+
+  .detailNav li {
+    padding-right: 120px; }
+
+  .detailNav li:last-child {
+    padding-right: 0; } }
+@media (min-width: 768px) and (max-width: 1240px) {
+  .detailNav li {
+    padding-right: 120px; }
+
+  .detailNav li:last-child {
+    padding-right: 0; } }
 .content {
   background: #f3f3f3; }
 
@@ -932,13 +997,9 @@ input[type="checkbox"]:checked + label span {
   padding: 0 0 0 20px; }
 
 .gifts .gifts_t {
-  width: 160px;
+  width: 130px;
   text-align: right;
-  margin-left: 0;
-  padding-right: 15px; }
-
-.gifts .gifts_name {
-  padding-left: 15px; }
+  margin-left: 0; }
 
 .foot {
   height: 82px;
@@ -1214,7 +1275,37 @@ input[type="checkbox"]:checked + label span {
   margin: 28px 0; }
 
 .onlinePayWay {
-  margin-bottom: 82px; }
+  margin-bottom: 82px;
+  position: relative; }
+
+.tips {
+  width: 300px;
+  height: 60px;
+  line-height: 60px;
+  border: 1px solid #ff5400;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  margin-left: -150px;
+  background: #ff5400;
+  display: none; }
+
+.codeBody {
+  width: 200px;
+  height: 200px;
+  margin: 20px auto;
+  display: none; }
+
+.codeBody img {
+  width: 100%; }
+
+.payMoney {
+  font-size: 18px;
+  color: #ff5400; }
 
 .payOk {
   font-size: 60px;
@@ -1380,11 +1471,14 @@ input[type="checkbox"]:checked + label span {
 .person {
   margin-bottom: 82px; }
 
-.person .col-lg-2 {
+.person .col-md-2 {
   padding: 0; }
 
-.person .col-lg-10 {
+.person .col-md-10 {
   padding-left: 30px; }
+
+.person .col-md-1 {
+  padding: 0; }
 
 .userInfo {
   text-align: center;
@@ -1485,7 +1579,7 @@ input[type="checkbox"]:checked + label span {
   display: inline-block;
   *display: inline;
   *zoom: 1;
-  margin-left: 137px; }
+  margin-left: 100px; }
 
 .gifts_img {
   display: inline-block;
@@ -1505,7 +1599,10 @@ input[type="checkbox"]:checked + label span {
 .myOrderList_gifts_out .row {
   margin-bottom: 28px;
   padding: 0;
-  margin-left: 0;
+  margin-left: 30px; }
+
+.gifts .myOrderList_gifts_out .row {
+  margin-left: -15px;
   margin-right: 0; }
 
 .myOrderList_gifts_out .row:last-child {
@@ -2025,6 +2122,12 @@ input[type="checkbox"]:checked + label span {
 .deliveryInfo_p {
   font-size: 18px; }
 
+@media (min-width: 768px) and (max-width: 1024px) {
+  .deliveryInfo_p {
+    font-size: 14px; }
+
+  .applySuccess .col-lg-7 {
+    border-right: none; } }
 .trackingMsg {
   padding: 20px 40px 30px 40px;
   position: relative; }
@@ -2294,7 +2397,8 @@ input[type="checkbox"]:checked + label span {
 .other_t {
   font-size: 14px;
   color: #898888;
-  text-align: center; }
+  text-align: center;
+  margin-bottom: -10px; }
 
 .login_other {
   color: #ff874c;
@@ -2302,6 +2406,11 @@ input[type="checkbox"]:checked + label span {
 
 .login_other .iconfont {
   font-size: 30px !important; }
+
+#login .form-control-feedback {
+  position: absolute;
+  right: 19px;
+  top: 9px; }
 
 @media (min-width: 768px) {
   .addressModal .form-horizontal .control-label {
@@ -2357,12 +2466,6 @@ input[type="checkbox"]:checked + label span {
   .myInfoModal .form-group {
     margin-bottom: 28px; }
 
-  #login .form-group {
-    margin-top: 28px; }
-
-  #login .form-links {
-    margin-bottom: 20px; }
-
   .myInfoModal .input-group {
     margin-bottom: 8px; }
 
@@ -2379,6 +2482,9 @@ input[type="checkbox"]:checked + label span {
 
   #login .form-group {
     margin-bottom: 0; }
+
+  #login .form-p {
+    margin-top: 28px; }
 
   .btn-red {
     width: 100%;
@@ -2403,7 +2509,10 @@ input[type="checkbox"]:checked + label span {
     padding: 12px 29px 12px 95px; }
 
   #login .form-control, #login .btn-yz {
-    margin-bottom: 28px; } }
+    margin: 14px 0; }
+
+  #login .btn-red {
+    margin-top: 14px; } }
 @media (min-width: 768px) and (max-width: 939px) {
   #navTopList li {
     padding: 10px 20px; } }
