--- a/app.scss
+++ b/app.scss
@@ -55,7 +55,7 @@ td,th,caption {font-size:14px;}
 h1, h2, h3, h4, h5, h6 { font-weight:normal;}
 address, caption, cite, code, dfn, th, var,label { font-style:normal; font-weight:normal;}
 a {color:#030304;text-decoration:none;}
-a:hover,a:focus{text-decoration:none;}
+a:hover,a:focus{text-decoration:none;outline: none;}
 a:visited{text-decoration:none;}
 a:link{text-decoration:none;}
 i{font-style: normal;}
@@ -448,10 +448,6 @@ input,textarea{
 .index-ktv .sy-box .sy-slide .product-info p {
   margin-bottom: 1em;
 }
-.index-ktv .sy-box .sy-slide .product-info p{
-  opacity: 1;
-}
-
 .index-ktv .sy-box .sy-slide .image-content {
   line-height: 0;
 }
@@ -547,10 +543,41 @@ input,textarea{
 }
 
 // page
-.productLeft{
-  padding: 66px 0 66px 300px;
+.page-product{
+  padding: 0;
+}
+.page-product .col-lg-5{
   background: #ff973c;
-  width: 800px;
+  padding: 66px 0 66px 15%;
+}
+@media(min-width: 769px)and (max-width:1024px){
+  .page-product .productLeft{
+    width: 100%;
+    background: #ff973c;
+  }
+  .page-product .col-lg-5{
+    padding: 66px 0;
+  }
+}
+@media(min-width: 1241px)and (max-width:1599px){
+  .page-product .col-lg-5{
+    padding: 66px 0 66px 4%;
+  }
+}
+@media(min-width: 1281px)and (max-width:1366px){
+  .page-product .col-lg-5{
+    padding: 66px 0 66px 6%;
+  }
+}
+@media(min-width: 1367px)and (max-width:1441px){
+  .page-product .col-lg-5{
+    padding: 66px 0 66px 8%;
+  }
+}
+@media(min-width: 1600px)and (max-width:1700px){
+  .page-product .col-lg-5{
+    padding: 66px 0 66px 11%;
+  }
 }
 .productRight{
   padding: 66px 0 66px 120px;
@@ -604,14 +631,14 @@ input,textarea{
   vertical-align: middle;
 }
 #chooseColor li{
-  width: 200px;
+  width: 180px;
   height: 60px;
   margin-top: 0;
 }
 .colorCircle{
   @include dib();
-  width: 30px;
-  height: 30px;
+  width: 26px;
+  height: 26px;
   border-radius: 100%;
   vertical-align: middle;
   margin-right: 15px;
@@ -627,8 +654,8 @@ input,textarea{
   vertical-align: middle;
 }
 .proService span{
-  padding: 0 25px;
-  font-size: 22px;
+  padding: 0 20px;
+  font-size: 20px;
   color: #9d9c9c;
   vertical-align: middle;
 }
@@ -647,7 +674,7 @@ input,textarea{
 }
 .proBuy{
   width: 694px;
-  margin-top: 30px;
+  margin-top: 26px;
   padding: 50px 23px;
   background: #fff;
   box-shadow: 0 0 27px rgba(0,0,0,0.1);
@@ -735,6 +762,56 @@ input,textarea{
   line-height: 82px;
   background: #fff;
   z-index: 99999;
+}
+@media(min-width: 1240px)and (max-width:1600px){
+  .accessoriesImgs {
+    width: 500px;
+  }
+  .accWords, .colorsWords {
+    padding-right: 30px;
+  }
+  .proService .iconfont {
+    font-size: 50px;
+  }
+  .proService span {
+    padding: 0 15px;
+    font-size: 18px;
+  }
+  .colors {
+    margin: 32px 0;
+  }
+  .proBuy {
+    width: 560px;
+    margin-top: 38px;
+    padding: 50px 23px;
+  }
+  .addTo {
+    width: 140px;
+    height: 68px;
+    line-height: 68px;
+    font-size: 20px;
+    margin-right: 20px;
+  }
+  .buyTo{
+    margin-right: 0;
+  }
+  .proBuy .inputBtn {
+    width: 80px;
+  }
+  .detailNav li {
+    padding-right: 120px;
+  }
+  .detailNav li:last-child{
+    padding-right: 0;
+  }
+}
+@media(min-width: 768px)and (max-width:1240px){
+  .detailNav li {
+    padding-right: 120px;
+  }
+  .detailNav li:last-child{
+    padding-right: 0;
+  }
 }
 //shopCart-content
 .content{
@@ -837,14 +914,11 @@ input[type="checkbox"]:checked + label span {
   padding: 0 0 0 20px;
 }
 .gifts .gifts_t{
-  width: 160px;
+  width: 130px;
   text-align: right;
   margin-left: 0;
-  padding-right: 15px;
 }
-.gifts .gifts_name{
-  padding-left: 15px;
-}
+
 .foot{height:82px;line-height:82px;background: #fff;position:relative;z-index:8;padding-right: 30px;}
 .foot .select-all{padding-left: 30px;text-align:center;}
 .foot .delete{padding-left:40px;padding-right: 40px;}
@@ -1049,6 +1123,36 @@ input[type="checkbox"]:checked + label span {
 }
 .onlinePayWay{
   margin-bottom: 82px;
+  position: relative;
+}
+.tips{
+  width: 300px;
+  height: 60px;
+  line-height: 60px;
+  border: 1px solid $hoverColor;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  margin-left: -150px;
+  background: $hoverColor;
+  display: none;
+}
+.codeBody{
+  width: 200px;
+  height: 200px;
+  margin: 20px auto;
+  display: none;
+}
+.codeBody img{
+  width: 100%;
+}
+.payMoney{
+  font-size: 18px;
+  color: $hoverColor;
 }
 .payOk{
   font-size: 60px;
@@ -1066,7 +1170,6 @@ input[type="checkbox"]:checked + label span {
 .payOrder-p span{
   color: $hoverColor;
 }
-
 .moreOrderDetail{
   color: #898888;
   line-height: 2;
@@ -1208,11 +1311,14 @@ input[type="checkbox"]:checked + label span {
 .person{
   margin-bottom: 82px;
 }
-.person .col-lg-2{
+.person .col-md-2{
   padding: 0;
 }
-.person .col-lg-10{
+.person .col-md-10{
   padding-left: 30px;
+}
+.person .col-md-1{
+  padding: 0;
 }
 .userInfo{
   text-align: center;
@@ -1309,7 +1415,7 @@ input[type="checkbox"]:checked + label span {
   vertical-align: top;
   width: 42px;
   @include dib();
-  margin-left: 137px;
+  margin-left: 100px;
 }
 .gifts_img{
   @include dib();
@@ -1327,7 +1433,10 @@ input[type="checkbox"]:checked + label span {
 .myOrderList_gifts_out .row{
   margin-bottom: 28px;
   padding: 0;
-  margin-left: 0;
+  margin-left: 30px;
+}
+.gifts .myOrderList_gifts_out .row{
+  margin-left: -15px;
   margin-right: 0;
 }
 .myOrderList_gifts_out .row:last-child{
@@ -1821,6 +1930,14 @@ input[type="checkbox"]:checked + label span {
 .deliveryInfo_p{
   font-size: 18px;
 }
+@media(min-width: 768px)and (max-width:1024px){
+  .deliveryInfo_p{
+    font-size: 14px;
+  }
+  .applySuccess .col-lg-7 {
+    border-right: none;
+  }
+}
 .trackingMsg{
   padding: 20px 40px 30px 40px;
   position: relative;
@@ -2092,6 +2209,7 @@ input[type="checkbox"]:checked + label span {
   font-size: 14px;
   color: #898888;
   text-align: center;
+  margin-bottom: -10px;
 }
 .login_other{
   color: #ff874c;
@@ -2100,7 +2218,11 @@ input[type="checkbox"]:checked + label span {
 .login_other .iconfont{
   font-size: 30px!important;
 }
-
+#login .form-control-feedback {
+  position: absolute;
+  right: 19px;
+  top: 9px;
+}
 @media (min-width: 768px){
   .addressModal .form-horizontal .control-label {
     padding-top: 0;
@@ -2155,12 +2277,6 @@ input[type="checkbox"]:checked + label span {
   .myInfoModal .form-group{
     margin-bottom: 28px;
   }
-  #login .form-group{
-    margin-top: 28px;
-  }
-  #login .form-links{
-    margin-bottom: 20px;
-  }
   .myInfoModal .input-group{
     margin-bottom: 8px;
   }
@@ -2178,7 +2294,9 @@ input[type="checkbox"]:checked + label span {
   #login .form-group{
     margin-bottom: 0;
   }
-
+  #login .form-p{
+    margin-top: 28px;
+  }
   .btn-red{
     width: 100%;
     height: 50px;
@@ -2202,9 +2320,13 @@ input[type="checkbox"]:checked + label span {
     padding: 12px 29px 12px 95px;
   }
   #login .form-control,#login .btn-yz{
-    margin-bottom: 28px;
+    margin: 14px 0;
+  }
+  #login .btn-red{
+    margin-top: 14px;
   }
 }
+
 
 
 @media(min-width: 320px)and (max-width:479px){
